<resources>
    <string name="app_name">Storyboard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_button_label">Search</string>
    <string name="collection_stories">stories</string>
    <string name="collection_authors">authors</string>
    <string name="collection_genres">genres</string>
    <string name="stories_field_genres">genre</string>
    <string name="stories_field_author">author</string>
    <string name="stories_field_title">title</string>
    <string name="stories_field_text">text</string>
    <string name="genres_field_type">name</string>
    <string name="genres_field_stories">stories</string>
    <string name="stories_genre_horror">Horror</string>
    <string name="stories_genre_fantasy">Fantasy</string>
    <string name="stories_genre_romance">Romance</string>
    <string name="stories_genre_drama">Drama</string>
    <string name="stories_genre_sciencefiction">Science Fiction</string>
    <string name="stories_genre_dystopian">Dystopian</string>
    <string name="stories_genre_tragedy">Tragedy</string>
    <string name="stories_genre_actionadventure">Action/Adventure</string>
    <string name="stories_genre_comedy">Comedy</string>
    <string name="stories_genre_thriller">Thriller</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Click here to register!</string>
    <string name="btn_link_to_login">Already registered? Log In!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_story_search">Search for Stories</string>
    <string name="title_activity_create_material_choosing">Create Works</string>
    <string name="title_activity_create_story">Create Story</string>
    <string name="title_activity_story_read">Read Story</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_writing_prompt">Writing Prompt</string>
    <string name="featured_stories">Featured Stories</string>
    <string name="subscribers">Subscribers</string>
    <string name="stories">Stories</string>
    <string name="recent_stories">Recent Stories</string>
    <string name="archive">Archive</string>
    <string name="night_mode_title">Enable Night Mode</string>
    <string name="night_mode_summary">Enable night mode to allow better viewing in a darker environment.</string>
    <string name="display_name">Display Name.</string>
    <string name="select_genres">Select genres</string>
    <string-array name="genre_list">
        <item>Science Fiction</item>
        <item>Comedy</item>
        <item>Horror</item>
        <item>Dystopian</item>
        <item>Drama</item>
        <item>Tragedy</item>
        <item>Action Adventure</item>
        <item>Thriller</item>
        <item>Fantasy</item>
        <item>Romance</item>
        <item>Default</item>
    </string-array>
    <string name="writing_prompt">Writing Prompt</string>
    <string name="writing_prompt_here">Begin writing prompt here.</string>
    <string name="dialog_title">Available Genres</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="clear_all">Clear all</string>
    <string name="genres_selected">Genres selected:</string>
    <string name="select_tags">Select tag</string>
    <string name="tag_as">Tag as:</string>
    <string name="in_progress">in-progress</string>
    <string name="complete">complete</string>
    <string name="updated">updated</string>
    <string name="post_prompt">Post</string>
    <string name="confirm_prompt_post">Are you sure you want to post this writing prompt?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="prompt_post_success">Writing prompt was successfully posted.</string>
    <string name="prompt_not_posted">Writing prompt not posted.</string>
    <string name="please_select_genre">Please select the genre/genres to go with this prompt.</string>
    <string name="please_write_prompt">You must write a prompt first!</string>
    <string name="create_story_title">Title:</string>
    <string name="create_story_title_hint">title</string>
    <string name="create_story_summary">Summary:</string>
    <string name="create_story_summary_hint">summary</string>
    <string name="create_story_privacy_level">Privacy Level:</string>
    <string name="create_story_privacy_private">Private</string>
    <string name="create_story_privacy_public">Public</string>
    <string name="create_story_status">Status:</string>
    <string name="create_story_status_in_progress">In Progress</string>
    <string name="create_story_status_complete">Complete</string>
    <string name="create_story_genre">Genre:</string>
    <string name="create_story_write_your_story">Start Writing Your Story!</string>
    <string name="create_story_body">body</string>
    <string name="title_activity_story_archive">StoryArchiveActivity</string>
    <string name="pref_title_display_name">Display name</string>
</resources>