<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/change_email" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:defaultValue="********"
        android:key="password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/change_password" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="example_switch"
        android:summary="@string/night_mode_summary"
        android:title="@string/night_mode_title" />



</PreferenceScreen>
