<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.WritingPrompt">

    <EditText
        android:id="@+id/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="100dp"
        android:hint="@string/writing_prompt_here"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_select_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/prompt"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="102dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/select_genres"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/display_selected_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/genres_selected_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/genres_selected_text"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_select_genres"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="26dp"
        android:textSize="15sp"
        android:text="@string/genres_selected" />

    <TextView
        android:id="@+id/tag_as_text"
        android:layout_width="55dp"
        android:layout_height="58dp"
        android:layout_alignStart="@+id/btn_select_genres"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-112dp"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:text="@string/tag_as" />

    <RadioGroup
        android:id="@+id/tag_group"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-184dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/btn_select_genres"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tag_in_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/in_progress" />

        <RadioButton
            android:id="@+id/tag_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/complete" />

        <RadioButton
            android:id="@+id/tag_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/updated" />
    </RadioGroup>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/post"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/post_prompt"
        android:textColor="@color/white" />

</RelativeLayout>